<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nanodegreeandroid.com.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_text"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="200dp"
        android:textSize="@dimen/abc_text_size_medium_material" />



    <Button
        android:text="@string/main_button_text1"
        android:id="@+id/btnPopularMovies"
        android:onClick="btnClick"
        android:layout_below="@+id/textView"
        style="@style/MainButton"/>

    <Button
        android:text="@string/main_button_text2"
        android:id="@+id/btnStockHawk"
        android:onClick="btnClick"
        android:layout_below="@+id/btnPopularMovies"
        style="@style/MainButton" />

    <Button
        android:text="@string/main_button_text3"
        android:id="@+id/btnBuildItBigger"
        android:onClick="btnClick"
        android:layout_below="@+id/btnStockHawk"
        style="@style/MainButton" />

    <Button
        android:text="@string/main_button_text4"
        android:id="@+id/btnAppMaterial"
        android:onClick="btnClick"
        android:layout_below="@+id/btnBuildItBigger"
        style="@style/MainButton" />

    <Button
        android:text="@string/main_button_text5"
        android:id="@+id/btnGoUbiquitous"
        android:onClick="btnClick"
        android:layout_below="@+id/btnAppMaterial"
        style="@style/MainButton" />

    <Button
        android:text="@string/main_button_text6"
        android:id="@+id/btnCapstone"
        android:onClick="btnClick"
        android:layout_below="@+id/btnGoUbiquitous"
        style="@style/MainButton" />



</RelativeLayout>
